--- a/less/_part.less
+++ b/less/_part.less
@@ -33,4 +33,16 @@
         height: ~"calc(100% - 6em)";
       }
     }
+
+    h4 {
+      margin-top: 0;
+    }
+  
+    hr {
+      margin: 14px 0;
+    }
+  
+    #resultContainer {
+      padding: 0 1em;
+    }
 }  
